@@ -4,6 +4,7 @@ Revision history for Syntax-Check
         - Update tests so they use $^X instead of calling perl, as the system
           perl was being used which has mismatched dependencies when running
           on CPAN testers (fixes #1)
+        - Added dependency of Module::Installed
 
 1.04    2020-12-07
         - Removed prereq of Module::Installed::Tiny, as the dependency chain
